src/components/TeamMember.sass
@import "../styles/bulma/utilities/_all"

.team-member-box
  flex-basis: 340px
  margin: 32px auto
  flex-grow: 0
  flex-shrink: 0

  .tm-img
    height: 125px
    width: 125px
    border-radius: 100%
    background-repeat: no-repeat
    background-size: cover
    background-position: center center
    margin-bottom: 40px
    align-items: left

  .tm-name
    color: #25244B
    font-family: apercu-medium
    font-size: 22px
    font-weight: 500
    letter-spacing: -0.46px
    line-height: 25px
    margin-bottom: 10px

  .tm-title
    color: #5641F2
    font-family: apercu-medium
    font-size: 16px
    letter-spacing: -0.19px
    line-height: 26px
    margin-bottom: 10px

  .tm-bio
    color: #6F6DA0
    font-size: 16px
    letter-spacing: -0.19px
    line-height: 26px
    padding-bottom: 10px

@media (max-width: 1300px)
  .team-member-box
    flex-basis: 300px
    margin: 32px auto

@media (max-width: 1200px)
  .team-member-box
    margin: 20px
    flex-basis: 45%

@media (max-width: 936px)

  .team-container
    margin-bottom: 48px

  .team-member-box
    flex-basis: 40%
    margin: 20px

